Tue Sep 20 21:58:23 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL3/ImpliedIDL/All/convert.idl:
        
          Modified valuetype declartion used as a primary key to
          conform to the CCM spec section 61.7.2.1 listing
          constraints on primary key types.

Tue Sep 20 02:25:34 2005  William Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers.mpc
  
          Quick fix for a build problem on Windows.  A better solution
 	  will follow when I check in my CIAO build system revamp.
	
Tue Sep 20 10:19:46 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* tools/Config_Handlers/test.cdp

	A test deployment plan file that contains odd constructs.
	Used for testing. 
	
Tue Sep 20 10:07:43 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/new_RepositoryManager/new_RepositoryManager.mpc

	Added a missing library.

Tue Sep 20 09:50:28 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp

	  Modified to kill all NodeApplication processes when the deployment fails.

Tue Sep 20 09:35:28 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/Plan_Launcher/Plan_Launcher.mpc

	Added a missing library.

Mon Sep 19 16:29:57 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* ADD_Handler.cpp
	* Common.h
	* IDD_Handler.cpp
	* IDD_Handler.h
	* IDREF_Base.cpp
	* IDREF_Base.h
	* IRDD_Handler.cpp
	* IRDD_Handler.h
	* MDD_Handler.cpp
	* PSPE_Handler.cpp
	* STD_CID_Handler.cpp
	* XML_Error_Handler.cpp

	Added some improved error handling/reporting. Much more to come.
	
	* test.cpp
	* RT-CCM/RT-CCM-Handlers.mpc
	* RT-CCM/SRD_Handler.cpp
	* RT-CCM/SRD_Handler.h
	* Config_Handlers.mpc
	* DP_Handler.cpp

	Added hooks for parsing ServerResources document into a deployment
	plan.

	This is activated by adding an InfoProperty with name
	"CIAOServerResources" with a value of a valid CSR file. 

	Also enabled parsing of deployRequirements and infoProperties.
